use swagger static folder instead

--- a/pom.xml
+++ b/pom.xml
@@ -93,12 +93,12 @@
         </dependency>
 
         <!-- springfox -->
-        <dependency>
+        <!-- dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.4.0</version>
             <scope>compile</scope>
-        </dependency>
+        </dependency -->
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
